Fixed a div ending that was out of place

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,6 +1,6 @@
 body {
   margin: 0;
-  font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
   font-size: 100%;
 }
 
@@ -16,7 +16,7 @@ header {
 
 #carouselSidebar {
   margin-top: 60rem;
+  display: inline-block;
   float: right;
   width: 900px;
 }
-
